Split SelectMenu into sealed family of StringMenu and EntityMenu
Collapses the runtime-discriminated SelectMenu class into a sealed
interface with two concrete variants - StringMenu for developer-defined
Option choices and EntityMenu for auto-populated user/role/mentionable/
channel selectors. DefaultValue is fully implemented (Snowflake + kind)
with a discord4j converter; EntityMenu validates accepted kinds per
variant and restricts allowedChannelTypes to CHANNEL menus.

The listener's on-submit update hook (component.updateSelected) now
dispatches polymorphically - StringMenu matches option values, EntityMenu
parses snowflakes - so user code never sees the wire-parsing difference.
SelectMenuContext stays non-generic; getSelectedValues() exposes the
variant-agnostic List<String> from Discord, and callers pattern-match on
getComponent() for variant-specific state.

Type.UNKNOWN dropped - the framework's identifier-based routing already
guards against unbuilt components. PageType and Option remain nested at
SelectMenu level (Option.MAX_ALLOWED usages unchanged). Call sites in
PaginationHandler, EditorPage, and FieldModalFactory retyped where they
needed the concrete string-menu builder.